src/test/deca/context/invalid/created/return/return_void_int.deca
// Description :
//    return mauvais type : int, demandé void
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
void met(){
return 1;
}
}